@@ -17,10 +17,13 @@ EXTRA_DIST = legacy_module.c module.c sfifo.c sfifo.h mpg123-with-modules
 
 CLEANFILES = *.a
 
-bin_PROGRAMS = mpg123 mpg123-id3dump
+bin_PROGRAMS = mpg123 mpg123-id3dump mpg123-strip
 
 mpg123_id3dump_DEPENDENCIES = libmpg123/libmpg123.la
 mpg123_id3dump_LDADD = libmpg123/libmpg123.la
+
+mpg123_strip_DEPENDENCIES = libmpg123/libmpg123.la
+mpg123_strip_LDADD = libmpg123/libmpg123.la
 
 EXTRA_PROGRAMS = tests/seek_whence tests/noise tests/text tests/plain_id3
 
@@ -63,6 +66,12 @@ mpg123_SOURCES = \
 	xfermem.h
 
 mpg123_id3dump_SOURCES = mpg123-id3dump.c \
+	getlopt.c \
+	getlopt.h \
+	libmpg123/compat.c \
+	libmpg123/compat.h
+
+mpg123_strip_SOURCES = mpg123-strip.c \
 	getlopt.c \
 	getlopt.h \
 	libmpg123/compat.c \
